# SuperCaterRustBackend

./: .env  Cargo.toml  README.md
migrations/: 20250920202330_create_users_table.sql
src/: config.rs  db.rs  errors.rs  main.rs  middleware.rs  telemetry.rs
src/actors/: messages.rs  mod.rs  queue_manager.rs
src/api/: add_queue.rs  gen_jwt.rs  get_queue.rs  mod.rs  protected.rs
src/models/: mod.rs
