[package]
name = "SuperCaterBackend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-session = { version = "0.11.0", features = ["cookie-session"] }
actix-web = "4.11.0"
actix-web-httpauth = "0.8.2"
argon2 = "0.5.3"
chrono = "0.4.42"
config = "0.15.16"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
rand = "0.9.2"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["chrono", "macros", "postgres", "runtime-tokio"] }
telemetry = "0.1.3"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["serde"] }
